[package]
name = "bakkesmod"
version = "0.1.1"
authors = ["Arator"]
edition = "2018"
description = "Rust SDK for writing BakkesMod plugins."
license = "MIT"
repository = "https://github.com/AratorRL/bakkesmod-rust"

[dependencies]
bakkesmod-macros = { path = "crates/bakkesmod-macros", version = "0.1.0" }

[lib]
name = "bakkesmod"

[workspace]
members = [
    "crates/bakkesmod-macros",
    "examples/rustplugin",
    "examples/tinyplugin",
    "examples/canvastest"
]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]