[package]
name = "bakkesmod-macros"
version = "0.1.0"
authors = ["Bart van der Vecht <bartvdvecht@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
# syn = { version = '0.15', features = ['visit', 'full'] }
syn = { version = "1.0", features = ['visit', 'full'] }
quote = "1.0"
proc-macro2 = "1.0"
