[package]
name = "rustplugin"
version = "0.1.0"
authors = ["Arator <arator.rl@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simplelog = "^0.7.4"
bakkesmod = { path = "../" }
bakkesmod-macros = { path = "../bakkesmod-macros" }

[lib]
name = "rustplugin"
crate_type = ["cdylib"]