[package]
name = "bakkesmod-macros"
version = "0.1.1"
authors = ["Arator"]
edition = "2018"
description = "Procedural macros for the bakkesmod crate"
license = "MIT"
repository = "https://github.com/AratorRL/bakkesmod-rust"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ['visit', 'full'] }
quote = "1.0"
proc-macro2 = "1.0"
